--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,14 @@
 language: python
 matrix:
   include:
-    - python: 2.7
     - python: 3.5
     - python: 3.6
     - python: 3.7
       dist: xenial
 cache: pip
 before_install:
-- '[ "${TRAVIS_PULL_REQUEST}" = "false" ] && openssl aes-256-cbc -K $encrypted_cebf25e6c525_key
-  -iv $encrypted_cebf25e6c525_iv -in .env.enc -out .env -d || true'
+- '[ "${TRAVIS_PULL_REQUEST}" = "false" ] && openssl aes-256-cbc -K $encrypted_key
+  -iv $encrypted_iv -in .env.enc -out .env -d || true'
 - npm install npm@latest -g
 install:
 - pip install tox-travis
@@ -39,7 +38,7 @@ deploy:
     python: '3.5'
     branch: master
 - provider: pypi
-  user: watson-devex
+  user: $PYPI_USER
   password: $PYPI_PASSWORD
   repository: https://upload.pypi.org/legacy
   skip_cleanup: true
