--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,15 @@
 [tox]
-envlist = lint, py27, py35, py36, py37
+envlist = lint, py35, py36, py37
 
 [testenv:lint]
 basepython = python3.7
 deps = pylint
-commands = pylint ibm_watson test examples
+commands = pylint mysdk test examples
 
 [testenv]
 passenv = TOXENV CI TRAVIS*
 commands =
-         py.test --reruns 3 --cov=ibm_watson
+         py.test --reruns 3 --cov=mysdk
          codecov -e TOXENV
 deps =
      -r{toxinidir}/requirements.txt
