Split unit and integration tests into two commands (#16)
* Split unit and integration tests into two commands

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,8 @@ install:
 - npm install @semantic-release/exec
 script:
 - pip install -U python-dotenv
-- tox
+- tox -- test/unit
+- tox -- test/integration
 before_deploy:
 - sudo apt-get update
 - pip install -r requirements.txt
