--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ commands = pylint mysdk test examples
 [testenv]
 passenv = TOXENV CI TRAVIS*
 commands =
-         py.test --reruns 3 --cov=mysdk
+         py.test --reruns 3 --cov=mysdk {posargs}
          codecov -e TOXENV
 deps =
      -r{toxinidir}/requirements.txt
