--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,11 +1,10 @@
 # test dependencies
 pytest>=2.8.2
-responses==0.9.0
-python_dotenv>=0.1.5;python_version!='3.2'
+responses>=0.10
+python_dotenv>=0.1.5
 pylint>=1.4.4
 tox>=2.9.1
 pytest-rerunfailures>=3.1
-ibm_cloud_sdk_core>=0.2.0
 
 # code coverage
 coverage<5
@@ -16,6 +15,3 @@ pytest-cov>=2.2.1
 recommonmark>=0.2.0
 Sphinx>=1.3.1
 bumpversion>=0.5.3
-
-# Web sockets
-websocket-client==0.48.0
