--- a/.travis.yml
+++ b/.travis.yml
@@ -1,49 +1,51 @@
 language: python
+
 matrix:
   include:
     - python: 3.5
     - python: 3.6
     - python: 3.7
-      dist: xenial
+    - python: 3.8
+
+dist: xenial
+
 cache: pip
+
 before_install:
-- '[ "${TRAVIS_PULL_REQUEST}" = "false" ] && openssl aes-256-cbc -K $encrypted_12345_key
-  -iv $encrypted_12345_iv -in .env.enc -out .env -d || true'
-- source .env
 - npm install npm@latest -g
+- sudo apt-get update
+- sudo apt-get install pandoc
+- pip install pypandoc
+
 install:
 - pip install tox-travis
-- pip install bumpversion
-- npm install @semantic-release/exec
+
+# before_script:
+# - 'openssl aes-256-cbc -K $my_key -iv $my_iv -in myservice.env.enc -out myservice.env -d || true'
+
 script:
-- pip install -U python-dotenv
-- tox -- test/unit
-- tox -- test/integration
+- tox
+
 before_deploy:
-- sudo apt-get update
-- pip install -r requirements.txt
-- pip install -r requirements-dev.txt
-- pip install pypandoc
-- sudo apt-get install pandoc
-- pip install --editable .
-deploy:
-- provider: script
-  script: docs/publish.sh
-  skip_cleanup: true
-  on:
-    python: '3.5'
-    tags: true
-- provider: script
-  script: npx semantic-release
-  skip_cleanup: true
-  on:
-    python: '3.5'
-    branch: master
-- provider: pypi
-  user: $PYPI_USER
-  password: $PYPI_PASSWORD
-  repository: https://upload.pypi.org/legacy
-  skip_cleanup: true
-  on:
-    python: '3.5'
-    tags: true
+- pip install bump2version
+- nvm install 12
+- npm install @semantic-release/changelog
+- npm install @semantic-release/exec
+- npm install @semantic-release/git
+- npm install @semantic-release/github
+
+# deploy:
+# - provider: script
+#   script: npx semantic-release
+#   skip_cleanup: true
+#   on:
+#     python: '3.5'
+#     branch: master
+# - provider: pypi
+#   user: $PYPI_USER
+#   password: $PYPI_PASSWORD
+#   repository: https://upload.pypi.org/legacy
+#   skip_cleanup: true
+#   on:
+#     python: '3.5'
+#     tags: true
