--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,10 @@
 [tox]
-envlist = lint, py35, py36, py37
+envlist = lint, py35, py36, py37, py38
 
 [testenv:lint]
 basepython = python3.7
 deps = pylint
-commands = pylint mysdk test examples
+commands = pylint --rcfile=.pylintrc mysdk test
 
 [testenv]
 passenv = TOXENV CI TRAVIS*
