--- a/.travis.yml
+++ b/.travis.yml
@@ -42,8 +42,8 @@ before_deploy:
 #     python: '3.5'
 #     branch: master
 # - provider: pypi
-#   user: $PYPI_USER
-#   password: $PYPI_PASSWORD
+#   user: __token__
+#   password: $PYPI_TOKEN
 #   repository: https://upload.pypi.org/legacy
 #   skip_cleanup: true
 #   on:
