chore: add .gitattributes

--- a/.gitignore
+++ b/.gitignore
@@ -68,10 +68,8 @@ test/__init__.py
 .sfdx/tools/apex.db
 .pytest_cache/
 
-# env.enc produced by scripts/update-auth-file.sh
-.env.enc
-
 # openapi-sdkgen
 .openapi-generator/
 .openapi-generator-ignore
 /.pydevproject
+/.settings/
