chore: re-gen example service code and update core dependency to v2.0.0

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,4 @@ jproperties
 requests>=2.0,<3.0
 python_dateutil>=2.5.3
 websocket-client==0.48.0
-ibm_cloud_sdk_core>=1.7.1
+ibm_cloud_sdk_core>=2.0.0,<3.0.0
