--- a/.travis.yml
+++ b/.travis.yml
@@ -4,20 +4,33 @@ dist: xenial
 
 cache: pip
 
+notifications:
+  email: true
+
+# After creating your SDK project from this template repository,
+# uncomment this section to enable builds on the appropriate python versions.
+# matrix:
+#   include:
+#     - python: 3.5
+#     - python: 3.6
+#     - python: 3.7
+#     - python: 3.8
+
 before_install:
 - npm install npm@latest -g
 - sudo apt-get update
 - sudo apt-get install pandoc
 - pip install pypandoc
+# - '[ "${TRAVIS_PULL_REQUEST}" == "false" ] && openssl aes-256-cbc -K $my_key -iv $my_iv -in myservice.env.enc -out myservice.env -d || true'
 
 install:
 - pip install tox-travis
 
-# before_script:
-# - 'openssl aes-256-cbc -K $my_key -iv $my_iv -in myservice.env.enc -out myservice.env -d || true'
-
 script: tox
 
+# After creating your SDK project from this template repository,
+# remove this entire "jobs" section as this is only applicable
+# to the template repo's travis build.
 jobs:
   include:
     - stage: Run tox tests
@@ -32,14 +45,15 @@ jobs:
         - ./install_scripts/install_deps_ubuntu.sh
         - ./setup_and_generate.sh -l ibm-python -t $TRAVIS_BRANCH
 
-before_deploy:
-- pip install bump2version
-- nvm install 12
-- npm install @semantic-release/changelog
-- npm install @semantic-release/exec
-- npm install @semantic-release/git
-- npm install @semantic-release/github
-
+# To enable semantic-release, uncomment these sections.
+# before_deploy:
+# - pip install bump2version
+# - nvm install 12
+# - npm install @semantic-release/changelog
+# - npm install @semantic-release/exec
+# - npm install @semantic-release/git
+# - npm install @semantic-release/github
+# 
 # deploy:
 # - provider: script
 #   script: npx semantic-release
