--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,8 @@
 [tox]
-envlist = lint, py35, py36, py37, py38
+envlist = py35-lint, py35, py36, py37, py38
 
-[testenv:lint]
-basepython = python3.7
+[testenv:py35-lint]
+basepython = python3.5
 deps = pylint
 commands = pylint --rcfile=.pylintrc mysdk test
 
