--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -3,7 +3,7 @@ current_version = 0.0.1
 commit = True
 message = Update version {current_version} -> {new_version}
 
-[bumpversion:file:mysdk/version.py]
+[bumpversion:file:ibm-code-engine-sdk/version.py]
 search = __version__ = '{current_version}'
 replace = __version__ = '{new_version}'
 
