--- a/.travis.yml
+++ b/.travis.yml
@@ -7,14 +7,12 @@ cache: pip
 notifications:
   email: true
 
-# After creating your SDK project from this template repository,
-# uncomment this section to enable builds on the appropriate python versions.
-# matrix:
-#   include:
-#     - python: 3.5
-#     - python: 3.6
-#     - python: 3.7
-#     - python: 3.8
+ matrix:
+   include:
+     - python: 3.5
+     - python: 3.6
+     - python: 3.7
+     - python: 3.8
 
 before_install:
 - npm install npm@latest -g
@@ -28,22 +26,6 @@ install:
 
 script: tox
 
-# After creating your SDK project from this template repository,
-# remove this entire "jobs" section as this is only applicable
-# to the template repo's travis build.
-jobs:
-  include:
-    - stage: Run tox tests
-      python: "3.5"
-    - python: "3.6"
-    - python: "3.7"
-    - python: "3.8"
-    - stage: Run system test with template
-      script: 
-        - git clone git@github.ibm.com:CloudEngineering/sdkgen-systest.git
-        - cd sdkgen-systest
-        - ./install_scripts/install_deps_ubuntu.sh
-        - ./setup_and_generate.sh -l ibm-python -t $TRAVIS_BRANCH
 
 # To enable semantic-release, uncomment these sections.
 # before_deploy:
