--- a/tox.ini
+++ b/tox.ini
@@ -4,12 +4,12 @@ envlist = py35-lint, py35, py36, py37, py38
 [testenv:py35-lint]
 basepython = python3.5
 deps = pylint
-commands = pylint --rcfile=.pylintrc ibm-code-engine-sdk test
+commands = pylint --rcfile=.pylintrc ibm_code_engine_sdk test
 
 [testenv]
 passenv = TOXENV CI TRAVIS*
 commands =
-         py.test --reruns 3 --cov=ibm-code-engine-sdk {posargs}
+         py.test --reruns 3 --cov=ibm_code_engine_sdk {posargs}
          codecov -e TOXENV
 deps =
      -r{toxinidir}/requirements.txt
