--- a/.travis.yml
+++ b/.travis.yml
@@ -36,26 +36,26 @@ script:
 - pytest test
 - ./test-integration.sh
 
-# before_deploy:
-# - pip install bump2version
-# - nvm install 12
-# - npm install @semantic-release/changelog
-# - npm install @semantic-release/exec
-# - npm install @semantic-release/git
-# - npm install @semantic-release/github
+before_deploy:
+- pip install bump2version
+- nvm install 12
+- npm install @semantic-release/changelog
+- npm install @semantic-release/exec
+- npm install @semantic-release/git
+- npm install @semantic-release/github
 
-# deploy:
-# - provider: script
-#   script: npx semantic-release
-#   skip_cleanup: true
-#   on:
-#     python: '3.6'
-#     branch: master
-# - provider: pypi
-#   user: __token__
-#   password: $PYPI_TOKEN
-#   repository: https://upload.pypi.org/legacy
-#   skip_cleanup: true
-#   on:
-#     python: '3.6'
-#     tags: true
+deploy:
+- provider: script
+  script: npx semantic-release
+  skip_cleanup: true
+  on:
+    python: '3.6'
+    branch: master
+- provider: pypi
+  user: __token__
+  password: $PYPI_TOKEN
+  repository: https://upload.pypi.org/legacy
+  skip_cleanup: true
+  on:
+    python: '3.6'
+    tags: true
