--- a/.travis.yml
+++ b/.travis.yml
@@ -50,7 +50,7 @@ deploy:
   skip_cleanup: true
   on:
     python: '3.6'
-    branch: master
+    branch: main
 - provider: pypi
   user: __token__
   password: $PYPI_TOKEN
