--- a/.travis_public.yml
+++ b/.travis_public.yml
@@ -14,10 +14,10 @@ notifications:
 
 matrix:
   include:
-    - python: 3.7
-    - python: 3.8
-    - python: 3.9
-    - python: 3.10
+    - python: '3.7'
+    - python: '3.8'
+    - python: '3.9'
+    - python: '3.10'
 
 install:
 - sudo apt-get update
@@ -29,23 +29,12 @@ install:
 script:
 - make ci
 
-before_deploy:
-- nvm install 14
-- npm install
-- pip install bump2version
-
 deploy:
-- provider: script
-  script: npm run semantic-release
-  skip_cleanup: true
-  on:
-    python: '3.7'
-    branch: main
 - provider: pypi
   user: __token__
   password: $PYPI_TOKEN
   repository: https://upload.pypi.org/legacy
   skip_cleanup: true
   on:
-    python: '3.7'
+    python: '3.10'
     tags: true
