feat(api): Adding support for Domain Mappings and Functions (#41)
* feat(api): Adding support for Domain Mappings and Functions

* fix for concourse automation

* add support for getting test dependencies

* add integration tests for Domain Mapping

* add integration tests for Functions

--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,6 @@ test/integration/test_code_engine_v2.py
 # ignore the generated SSH and TLS keys and certs
 test/integration/domain*
 test/integration/sshkey*
+
+# API repo (pulled from Github)
+api
