--- a/.travis_public.yml
+++ b/.travis_public.yml
@@ -19,6 +19,7 @@ matrix:
     - python: '3.8'
     - python: '3.9'
     - python: '3.10'
+    - python: '3.11'
 
 install:
 - sudo apt-get update
@@ -38,5 +39,5 @@ deploy:
   repository: https://upload.pypi.org/legacy
   skip_cleanup: true
   on:
-    python: '3.10'
+    python: '3.11'
     tags: true
